--- a/game/blessing.html
+++ b/game/blessing.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Blessing</title>
-    <link rel="stylesheet" href="blessing.css">
+    <link rel="stylesheet" href="./styles/blessing.css">
 </head>
 
 <body>
@@ -27,7 +27,7 @@
         </div>
     </div>
 
-    <script src="../assets/js/characters.js"></script>
+    <script src="./js/characters.js"></script>
     <script>
         const buttonSound = new Audio("../assets/sound/button_sound.mp3");
         const qs = new URLSearchParams(window.location.search);
@@ -94,7 +94,7 @@
         }, { passive: false });
     </script>
 
-    <script src="../assets/js/cursor.js"></script>
+    <script src="./js/cursor.js"></script>
 </body>
 
 </html>
