--- a/game/character_selector.html
+++ b/game/character_selector.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Character Selector</title>
-  <link rel="stylesheet" href="character_selector.css">
+  <link rel="stylesheet" href="./styles/character_selector.css">
 </head>
 
 <body>
@@ -13,7 +13,7 @@
 
   <!-- Container where characters will appear -->
   <div id="character-container" class="character-grid"></div>
-  <script src="../assets/js/characters.js"></script>
+  <script src="./js/characters.js"></script>
 
   <script>
     const buttonSound = new Audio("../assets/sound/button_sound.mp3");
@@ -64,7 +64,7 @@
     });
   </script>
 
-  <script src="../assets/js/cursor.js"></script>
+  <script src="./js/cursor.js"></script>
 </body>
 
 </html>
