--- a/game/forest_battle.html
+++ b/game/forest_battle.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Forest</title>
-  <link rel="stylesheet" href="battle.css" />
+  <link rel="stylesheet" href="./styles/battle.css" />
   <style>
     :root {
       --scene-w: 720px;
@@ -154,9 +154,9 @@
     </div>
   </div>
 
-  <script src="../assets/js/characters.js"></script>
-  <script src="../assets/js/enemies.js"></script>
-  <script src="../assets/js/regions.js"></script>
+  <script src="./js/characters.js"></script>
+  <script src="./js/enemies.js"></script>
+  <script src="./js/regions.js"></script>
 
   <script>
     const qs = new URLSearchParams(location.search);
