--- a/game/shop.html
+++ b/game/shop.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Shop</title>
-    <link rel="stylesheet" href="shop.css">
+    <link rel="stylesheet" href="./styles/shop.css">
 </head>
 
 <body>
@@ -68,7 +68,7 @@
         <button id="back-btn" onclick="goBack()">Back to Overworld</button>
     </div>
 
-    <script src="../assets/js/characters.js"></script>
+    <script src="./js/characters.js"></script>
     <script>
         const buttonSound = new Audio("../assets/sound/button_sound.mp3");
 
@@ -199,7 +199,7 @@
         }
     </script>
 
-    <script src="../assets/js/cursor.js"></script>
+    <script src="./js/cursor.js"></script>
 </body>
 
 </html>
