--- a/game/temple_battle2.html
+++ b/game/temple_battle2.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Temple Battle 2</title>
-  <link rel="stylesheet" href="battle.css" />
+  <link rel="stylesheet" href="./styles/battle.css" />
   <style>
     :root {
       --scene-w: 720px;
@@ -172,10 +172,9 @@
     </div>
   </div>
 
-  <script src="../assets/js/characters.js"></script>
-  <script src="../assets/js/enemies.js"></script>
-  <script src="../assets/js/regions.js"></script>
-
+  <script src="./js/characters.js"></script>
+  <script src="./js/enemies.js"></script>
+  <script src="./js/regions.js"></script>
   <script>
     const qs = new URLSearchParams(location.search);
     const regionKey = "temple";
@@ -343,7 +342,7 @@
       if (e.key === "Escape") document.getElementById("run-btn").click();
     });
   </script>
-  <script src="../assets/js/cursor.js"></script>
+  <script src="./js/cursor.js"></script>
 </body>
 
 </html>
